# pixoo64

./: Cargo.toml  README.md
src/: color.rs  constants.rs  lib.rs  pixoo64.rs
src/error/: mod.rs  reset_error.rs  send_error.rs  send_post_error.rs  send_post_parse_error.rs  send_post_request_build_error.rs  send_post_request_error.rs  set_access_error.rs  set_error.rs  set_out_of_range_error.rs
src/model/: mod.rs  pixoo64_response.rs
