[package]
name = "pixoo64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="0.14", features=["tcp", "client", "http1"]}
base64 = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"